# openenv-image-optimizer

./: README.md
openenv-image-optimizer/: Dockerfile  README.md  app.py  dockerfile  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
openenv-image-optimizer/server/: app.py
