[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-image-optimizer"
version = "1.0.0"
description = "OpenEnv MLOps Agent Baseline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "openai",
    "httpx",
    "fastapi",
    "uvicorn"
]